Fix code style issues